--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,12 @@
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
 }
+
 /* write your parent styles in here for your App.js */
+button {
+  margin: 3px;
+  color: #7a6a6a;
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 3px;
+  height: 1.8em;
+}
